fixed the <leading /> layout issue when browsing web site on FireFox

--- a/src/components/Leading.css
+++ b/src/components/Leading.css
@@ -1,7 +1,9 @@
 .leading-container {
-  min-height: 450px;
   max-width: 740px;
   margin: 0 auto;
+  height: 0;
+  min-height: 450px;
+  margin-bottom: 45px;
 }
 .leading-container--fit {
   width: 100%;
@@ -10,6 +12,14 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 2em;
+}
+.leading-container--fit div.img {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 100%;
 }
 .leading-video-container {
   max-height: 400px;
@@ -22,7 +32,8 @@
   padding-bottom: 56.25%;
   /* 16:9 */
   padding-top: 25px;
-  height: 0;
+  /*height: 0;*/
+  height: 100%;
 }
 .leading-container_embedded iframe {
   position: absolute;
@@ -55,6 +66,6 @@
 }
 @media screen and (max-width: 767px) {
   .leading-container {
-    min-height: auto;
+    min-height: 200px;
   }
 }
